# StatMC-opencv_contrib

./: README.md
modules/cudaimgproc/: CMakeLists.txt
modules/cudaimgproc/include/opencv2/: cudaimgproc.hpp
modules/cudaimgproc/src/: stat_denoiser.cpp
modules/cudaimgproc/src/cuda/: stat_denoiser.cu
samples/stat_denoiser/: CMakeLists.txt  _download-example-images.sh  main.cpp
